files/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: eladsopher
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: mariadb
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/eladsopher/final-workshop:mariadb-10.6.4-focal
        ports:
        - containerPort: 3306
        args:
        - --default-authentication-plugin=mysql_native_password
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ebs-sc-eladsopher
      resources:
        requests:
          storage: 1Gi
