files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: eladsopher
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  clusterIP: None  # Headless service for StatefulSet
