files/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: eladsopher
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: eladsopher
  rules:
  - host: afd291ea56b0e40d9aba85bc4ac72707-1219273054.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /grafana
        pathType: ImplementationSpecific
        backend:
          service:
            name: elad-sopher-monitor-grafana
            port:
              number: 80
